img link updated

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
     --members-width: 240px;
     --background-shading: 100%;
     --background-overlay: rgba(0, 0, 0, 0.6);
-    --background-image: url(https://github.com/GioXeR95/css_theming/blob/main/img/bg_background_0.png);
+    --background-image: url(https://raw.githubusercontent.com/GioXeR95/css_theming/refs/heads/main/img/bg_background_0.png);
     --background-position: center;
     --background-size: cover;
     --background-repeat: no-repeat;
